# Internet_Store

./: .env.sample  README.md  categories_data.json  data.json  products_data.json  pyproject.toml  weblog_data.json
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py  fill_catalog.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py  0003_version.py  0004_alter_version_is_active.py  0005_product_user.py
catalog/templates/catalog/: contacts.html  home.html  info_about_product.html  products.html
catalog/templates/catalog/layouts/: layout_base.html  layout_card_categories.html  layout_card_product.html
config/: settings.py  urls.py
media/blog/: Excel_Python.jfif
users/: forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_user_is_verified_user_verification_token.py  0004_alter_user_verification_token.py
users/templates/users/: confirmation_error.html  confirmation_success.html  generate_and_send_password.html  login.html  password_reset_error.html  password_reset_success.html  register.html  user_form.html  verify_email.html
weblog/: admin.py  forms.py  models.py  urls.py  views.py
weblog/management/commands/: fill_weblog.py
weblog/migrations/: 0001_initial.py
weblog/templates/weblog/: weblog_confirm_delete.html  weblog_detail.html  weblog_form.html  weblog_list.html
