[tool.poetry]
name = "internet-store"
version = "0.1.0"
description = ""
authors = ["Pvl"]
readme = "README.md"
packages = [{include = "internet_store"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
