[tool.poetry]
name = "internet-store"
version = "0.1.0"
description = ""
authors = ["Pvl"]
readme = "README.md"
packages = [{include = "internet_store"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2 = "^2.9.7"
pillow = "^10.0.0"
ipython = "^8.14.0"
pytils = "^0.4.1"
redis = "^5.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
